partial  fix